--- a/biodata.html
+++ b/biodata.html
@@ -10,7 +10,7 @@
 	<h1 style="font-family: lucida handwriting; color: darkblue; font-size: 300%; text-align: center;"><b>My Biodata</b></h1>
 
 	<br>
-		<center><img src="images/uzma.jpg" height="300px" width="300px" border="2cm"></center>
+		<center><img src="images/uzma.JPG" height="300px" width="300px" border="2cm"></center>
 	<div style="text-align: center;">
 
 	<p style="font-family: cursive; text-align: center; font-size: 15px;">
