--- a/gallery.html
+++ b/gallery.html
@@ -10,17 +10,17 @@
 
 	<p>
 	   <img src="images/pic1.jpg" height="250px" width="210px">
-       <img src="images/pic2.jpg" height="250px" width="210px">
-       <img src="images/pic3.jpg" height="250px" width="220px">
-       <img src="images/pic4.jpg" height="250px" width="220px">
+       <img src="images/pic2.JPG" height="250px" width="210px">
+       <img src="images/pic3.JPG" height="250px" width="220px">
+       <img src="images/pic4.JPG" height="250px" width="220px">
        <img src="images/pic5.jpg" height="250px" width="220px">
-       <img src="images/pic6.jpg" height="250px" width="210px">
-       <img src="images/pic7.jpg" height="250px" width="220px">
+       <img src="images/pic6.JPG" height="250px" width="210px">
+       <img src="images/pic7.JPG" height="250px" width="220px">
        <img src="images/pic8.jpg" height="250px" width="220px">
        <img src="images/pic9.jpg" height="250px" width="220px">
        <img src="images/pic10.jpg" height="250px" width="220px">
        <img src="images/pic11.jpg" height="250px" width="220px">
-       <img src="images/pic12.jpg" height="250px" width="210px">
+       <img src="images/pic12.JPG" height="250px" width="210px">
    </p>
 <div align="right"><a href="index.html"><img src="images/button.png" ></a></div>
 </body>
