--- a/experience.html
+++ b/experience.html
@@ -8,10 +8,10 @@
 
 	<h1 style="font-family: lucida handwriting; color: darkblue; font-size: 300%; text-align: center;"><b>My Experience</b></h1> 
 
-	<p><center><img src="images/kfc1.jpg" height="250px" width="250px"></center></p>
+	<p><center><img src="images/kfc1.JPG" height="250px" width="250px"></center></p>
 	<p style="font-family: cursive; font-size: 15px; text-align: center;">I was experience worked as a partimer at KFC Kuantan Parade as a cashier since i finish my SPM and every semester break. </p> 
 
-	<p><center><img src="images/popular.jpg" height="250px" width="250px"></center></p>
+	<p><center><img src="images/popular.JPG" height="250px" width="250px"></center></p>
 	<p style="font-family: cursive; font-size: 15px; text-align: center;">I was worked at Popular Bookstore when the company doing the books fair.</p>
 <div align="right"><a href="index.html"><img src="images/button.png" ></a></div>
 
