--- a/family.html
+++ b/family.html
@@ -30,7 +30,7 @@
 
 	<h1 style="font-family: lucida handwriting; color: darkblue; font-size: 300%; text-align: center;"><b>My Family</b></h1>
 
-<p><center><img src="images/family.jpg" height="340px" width="340px"></center></p>
+<p><center><img src="images/family.JPG" height="340px" width="340px"></center></p>
 
 <p>
 	<table style="width: 50%; font-family: cursive; font-size: 15px;" align="center">
