--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 
 	</style>
 </head>
-<body style="background-image: url(images/homepage.jpg);">
+<body style="background-image: url(images/homepage.JPG);">
 	
 	<ul>
-		<li><a href="index.html" target="blank">HOME</a></li>
-		<li><a href="biodata.html" target="blank">BIODATA</a></li>
-		<li><a href="experience.html" target="blank">EXPERIENCE</a></li>
-		<li><a href="education.html" target="blank">EDUCATION</a></li>
-		<li><a href="family.html" target="blank">FAMILY</a></li>
-		<li><a href="gallery.html" target="blank">GALLERY</a></li>
-		<li><a href="contact.html" target="blank">CONTACT ME</a></li>
+		<li><a href="index.html" target="_blank">HOME</a></li>
+		<li><a href="biodata.html" target="_blank">BIODATA</a></li>
+		<li><a href="experience.html" target="_blank">EXPERIENCE</a></li>
+		<li><a href="education.html" target="_blank">EDUCATION</a></li>
+		<li><a href="family.html" target="_blank">FAMILY</a></li>
+		<li><a href="gallery.html" target="_blank">GALLERY</a></li>
+		<li><a href="contact.html" target="_blank">CONTACT ME</a></li>
 
 	</ul>
 
